# skopus

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: bench-smoke.yml  test.yml
bench/: __init__.py  config.py  context.py  driver.py  harness.py
bench/correction_persistence/: __init__.py  dataset.json  runner.py
bench/locomo/: __init__.py
bench/longmemeval/: __init__.py
bench/msc/: __init__.py
bench/ruler/: __init__.py
docs/: DESIGN.md
skopus/: __init__.py  __main__.py  cli.py  evolve.py  graphify_bridge.py  renderer.py  wizard.py
skopus/adapters/: __init__.py  aider.py  base.py  claude_code.py  codex.py  copilot.py  cursor.py  gemini.py
skopus/templates/charter/: CLAUDE.md.j2  user_profile.md.j2  workflow_partnership.md.j2
skopus/templates/memory/: MEMORY.md.j2  feedback_seed_blank.md  feedback_seed_bug_hunter.md  feedback_seed_founder.md  feedback_seed_research.md  feedback_seed_solo_dev.md  feedback_seed_team_lead.md
skopus/templates/vault/: CLAUDE.md.j2  log.md.j2
skopus/templates/vault/.claude/commands/: bench-contribute.md  charter-evolve.md  compile.md  ingest.md  lint.md  query.md  wiki.md
skopus/templates/vault/wiki/: index.md.j2
tests/: test_adapter_path_resolution.py  test_adapters.py  test_bench_cp.py  test_bench_harness.py  test_cli.py  test_evolve.py  test_graphify_bridge.py  test_multi_adapters.py  test_renderer.py  test_wizard.py
